--- a/app/views/layouts/main.hbs
+++ b/app/views/layouts/main.hbs
@@ -1,6 +1,16 @@
 <html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>Report</title>
+    <!-- TODO: have css file -->
+    <style>
+    ul {
+      list-style-type: none;
+    }
+    ul li{
+      display: inline;
+    }
+    </style>
 </head>
 
 <body>
